logs/pybb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/South-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/common'...
Listing './lib/python3.5/site-packages/common/data'...
Listing './lib/python3.5/site-packages/common/data/app_template'...
Compiling './lib/python3.5/site-packages/common/decorators.py'...
***   File "./lib/python3.5/site-packages/common/decorators.py", line 61
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/common/fields.py'...
***   File "./lib/python3.5/site-packages/common/fields.py", line 94
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/common/mail.py'...
***   File "./lib/python3.5/site-packages/common/mail.py", line 49
    except KeyError, AttributeError:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/common/management'...
Listing './lib/python3.5/site-packages/common/management/commands'...
Compiling './lib/python3.5/site-packages/common/management/commands/common_startapp.py'...
***   File "./lib/python3.5/site-packages/common/management/commands/common_startapp.py", line 25
    print 'Creating directory: %s' % dst
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/common/progress.py'...
***   File "./lib/python3.5/site-packages/common/progress.py", line 22
    print 'Processed %d %s%s' % (self.count, self.name, percents)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/common/templates'...
Listing './lib/python3.5/site-packages/common/templatetags'...
Listing './lib/python3.5/site-packages/django_common-0.1.51.egg-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybb'...
Listing './lib/python3.5/site-packages/pybb/management'...
Listing './lib/python3.5/site-packages/pybb/management/commands'...
Compiling './lib/python3.5/site-packages/pybb/management/commands/pybb_create_related_objects.py'...
***   File "./lib/python3.5/site-packages/pybb/management/commands/pybb_create_related_objects.py", line 27
    print 'New profiles: %d' % profile_count
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybb/management/commands/pybb_delete_invalid_topics.py'...
***   File "./lib/python3.5/site-packages/pybb/management/commands/pybb_delete_invalid_topics.py", line 22
    print 'Found %d invalid topics' % count
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybb/management/commands/pybb_install.py'...
***   File "./lib/python3.5/site-packages/pybb/management/commands/pybb_install.py", line 15
    print 'Creating directory: %s' % dst
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pybb/management/commands/pybb_rebuild_counters.py'...
***   File "./lib/python3.5/site-packages/pybb/management/commands/pybb_rebuild_counters.py", line 21
    print '--'
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pybb/markups'...
Compiling './lib/python3.5/site-packages/pybb/markups/postmarkup.py'...
***   File "./lib/python3.5/site-packages/pybb/markups/postmarkup.py", line 1024
    print """<link rel="stylesheet" href="code.css" type="text/css" />\n"""
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pybb/migrations'...
Listing './lib/python3.5/site-packages/pybb/static'...
Listing './lib/python3.5/site-packages/pybb/static/pybb'...
Listing './lib/python3.5/site-packages/pybb/static/pybb/css'...
Listing './lib/python3.5/site-packages/pybb/static/pybb/img'...
Listing './lib/python3.5/site-packages/pybb/static/pybb/js'...
Listing './lib/python3.5/site-packages/pybb/templates'...
Listing './lib/python3.5/site-packages/pybb/templates/pybb'...
Listing './lib/python3.5/site-packages/pybb/templates/pybb/feeds'...
Listing './lib/python3.5/site-packages/pybb/templatetags'...
Compiling './lib/python3.5/site-packages/pybb/templatetags/pybb_tags.py'...
***   File "./lib/python3.5/site-packages/pybb/templatetags/pybb_tags.py", line 205
    raise template.TemplateSyntaxError, "%r tag requires arguments" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pybb-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/pytils'...
Listing './lib/python3.5/site-packages/pytils/templatetags'...
Listing './lib/python3.5/site-packages/pytils/test'...
Listing './lib/python3.5/site-packages/pytils/test/templatetags'...
Listing './lib/python3.5/site-packages/pytils/third'...
Listing './lib/python3.5/site-packages/pytils-0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/south'...
Listing './lib/python3.5/site-packages/south/creator'...
Listing './lib/python3.5/site-packages/south/db'...
Listing './lib/python3.5/site-packages/south/db/sql_server'...
Listing './lib/python3.5/site-packages/south/hacks'...
Listing './lib/python3.5/site-packages/south/introspection_plugins'...
Listing './lib/python3.5/site-packages/south/management'...
Listing './lib/python3.5/site-packages/south/management/commands'...
Listing './lib/python3.5/site-packages/south/migration'...
Listing './lib/python3.5/site-packages/south/tests'...
Listing './lib/python3.5/site-packages/south/tests/brokenapp'...
Listing './lib/python3.5/site-packages/south/tests/brokenapp/migrations'...
Listing './lib/python3.5/site-packages/south/tests/circular_a'...
Listing './lib/python3.5/site-packages/south/tests/circular_a/migrations'...
Listing './lib/python3.5/site-packages/south/tests/circular_b'...
Listing './lib/python3.5/site-packages/south/tests/circular_b/migrations'...
Listing './lib/python3.5/site-packages/south/tests/deps_a'...
Listing './lib/python3.5/site-packages/south/tests/deps_a/migrations'...
Listing './lib/python3.5/site-packages/south/tests/deps_b'...
Listing './lib/python3.5/site-packages/south/tests/deps_b/migrations'...
Listing './lib/python3.5/site-packages/south/tests/deps_c'...
Listing './lib/python3.5/site-packages/south/tests/deps_c/migrations'...
Listing './lib/python3.5/site-packages/south/tests/emptyapp'...
Listing './lib/python3.5/site-packages/south/tests/emptyapp/migrations'...
Listing './lib/python3.5/site-packages/south/tests/fakeapp'...
Listing './lib/python3.5/site-packages/south/tests/fakeapp/migrations'...
Listing './lib/python3.5/site-packages/south/tests/non_managed'...
Listing './lib/python3.5/site-packages/south/tests/non_managed/migrations'...
Listing './lib/python3.5/site-packages/south/tests/otherfakeapp'...
Listing './lib/python3.5/site-packages/south/tests/otherfakeapp/migrations'...
Listing './lib/python3.5/site-packages/south/utils'...
Listing './share'...
Listing './share/python-wheels'...
